0.18.3	UNRELEASED

 BUG FIXES

  * Read config during porcelain operations that involve remotes.
    (Jelmer Vernooĳ, #545)

  * Fix headers of empty chunks in unified diffs. (Taras Postument, #543)

 IMPROVEMENTS

  * Add ``dulwich.porcelain.update_head``. (Jelmer Vernooĳ, #439)

0.18.2	2017-08-01

 TEST FIXES

  * Use constant timestamp so tests pass in all timezones, not just BST.
    (Jelmer Vernooĳ)

0.18.1	2017-07-31

 BUG FIXES

  * Fix syntax error in dulwich.contrib.test_swift_smoke.
    (Jelmer Vernooĳ)

0.18.0	2017-07-31

 BUG FIXES

  * Fix remaining tests on Windows. (Jelmer Vernooĳ, #493)

  * Fix build of C extensions with Python 3 on Windows.
    (Jelmer Vernooĳ)

  * Pass 'mkdir' argument onto Repo.init_bare in Repo.clone.
    (Jelmer Vernooĳ, #504)

  * In ``dulwich.porcelain.add``, if no files are specified,
    add from current working directory rather than repository root.
    (Jelmer Vernooĳ, #521)

  * Properly deal with submodules in 'porcelain.status'.
    (Jelmer Vernooĳ, #517)

  * ``dulwich.porcelain.remove`` now actually removes files from
    disk, not just from the index. (Jelmer Vernooĳ, #488)

  * Fix handling of "reset" command with markers and without
    "from". (Antoine Pietri)

  * Fix handling of "merge" command with markers. (Antoine Pietri)

  * Support treeish argument to porcelain.reset(), rather than
    requiring a ref/commit id. (Jelmer Vernooĳ)

  * Handle race condition when mtime doesn't change between writes/reads.
    (Jelmer Vernooĳ, #541)

  * Fix ``dulwich.porcelain.show`` on commits with Python 3.
    (Jelmer Vernooĳ, #532)

 IMPROVEMENTS

  * Add basic support for reading ignore files in ``dulwich.ignore``.
    ``dulwich.porcelain.add`` and ``dulwich.porcelain.status`` now honor
    ignores. (Jelmer Vernooĳ, Segev Finer, #524, #526)

  * New ``dulwich.porcelain.check_ignore`` command.
    (Jelmer Vernooĳ)

  * ``dulwich.porcelain.status`` now supports a ``ignored`` argument.
    (Jelmer Vernooĳ)
